2011-07-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* debbugs-gnu.el (debbugs-gnu-send-control-message): Add "pending"
	etc.

2011-07-14  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-subject): New defvar.
	(debbugs-gnu-select-report): Set it buffer local.
	(debbugs-gnu-summary-mode): Use it for adapting subject of replies.

2011-07-13  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs.el (debbugs-get-bugs): Weaken syntax for packages (and
	severities and tags).  Fix error messages.

2011-07-12  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-get-bugs): Reinsert sorting of ids.
	This is needed when several sets of bugs are retrieved in a loop.
	Allow empty packages or severities.
	(debbugs-gnu-show-reports): Erase buffer on entry.  Initialize
	header line, move from ...
	(debbugs-gnu-mode): ... here.
	(debbugs-gnu-state-preference): Make it a defconst.
	(debbugs-gnu-severity-preference): New defconst.
	(debbugs-gnu-get-state-preference)
	(debbugs-gnu-get-severity-preference): New defuns.
	(debbugs-gnu-sort-state): When two bugs have the same age, sort
	per serverity.

2011-07-11  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (debbugs-gnu-sort-state): Give tagged bugs
	priority 20.  In case there is just the severity list '("tagged"),
	do not use that priority.
	(debbugs-gnu-sort-title): Fix silly bug.

2011-07-11  Michael Albinus  <michael.albinus@gmx.de>

	* debbugs-gnu.el (top): Require `tabulated-list'.  Autoload
	`widget-convert'.
	(debbugs-gnu-handled, debbugs-gnu-stale): Fix docstring.
	(debbugs-gnu-get-bugs): Do not sort ids, it is done later anyway.
	(debbugs-gnu-show-reports): Move inserting of text to ...
	(debbugs-gnu-print-entry): New defun.
	(debbugs-gnu-mode-map): Set parent map to `tabulated-list-mode-map'.
	(debbugs-gnu-mode): Derive from `tabulated-list-mode'.  Initialize
	`tabulated-list-*' objects.
	(debbugs-gnu-sort-id, debbugs-gnu-sort-state)